--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,7 +187,7 @@ body {
   pointer-events: none;
 }
 
-.section-divider {
+/* .section-divider {
   @apply border-neutral/50 relative my-10 my-16 w-full border-t;
 }
 
@@ -203,7 +203,7 @@ body {
 
 .section-divider::after {
   right: -8px;
-}
+} */
 
 .blueprint-marker {
   @apply font-krypton text-primary/50 absolute top-0 -translate-y-full pb-1 text-[10px] md:text-sm;
